added number of failed files to status
